styles.css
#section1 {
	height: 200px;
   	background-image: linear-gradient(black, green);
	height:100vh;
	font-size: 72px;
	color: white;
	text-align: center;
	
}
#section2 {
	background-image: linear-gradient(green, red);
	height:100vh;
	height: 200px;
	
}
#section3 {
	background-image: linear-gradient(red, gray);
	height:100vh;
	height: 200px;
	
}
#section4 {
	background-image: linear-gradient(gray, black);
	height:100vh;
	height: 200px;
	
}
div {
    	height:100vh;
	padding: 0px;
	margin: 0px;
	border: 0px;

}
html,
body {
	font-family: Courier;
	margin:0;
    padding:0;
}

